fixed according to comments:
* fixed non-visible cursor pointer on focused input;
* removed truncating of user info on user-card back;
* decreased sound volume;
* fixed sound button text;
* fixed un-slashed end divs in user-cards;

--- a/submissions/nadsatt/friends-app/styles/filter-item.css
+++ b/submissions/nadsatt/friends-app/styles/filter-item.css
@@ -41,7 +41,6 @@
 
 input.filter-item__option {
     flex-grow: 1;
-    color: white;
     background-color: white;
     border: 1px solid white;
     border-radius: 5px;
